--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.CardList {
+    @apply w-48 h-64 shadow-md items-center list-none
+}
+
+.Card{
+    @apply w-full h-full mx-2 my-4
+}
